--- a/iwp/index.html
+++ b/iwp/index.html
@@ -3,7 +3,7 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Construction - Free HTML Bootstrap Template</title>
+        <title>International Waterproofing</title>
         <!-- Mobile Specific Meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <!-- Custom Fonts -->
@@ -51,9 +51,9 @@
             <div class="top_nav">
                 <div class="container">
                     <ul class="list-inline info">
-                        <li><a href="#"><span class="fa fa-phone"></span> 1234 - 5678 - 9012</a></li>
-                        <li><a href="#"><span class="fa fa-envelope"></span> support@Construct.com</a></li>
-                        <li><a href="#"><span class="fa fa-clock-o"></span> Mon - Sat 9:00 - 19:00</a></li>
+                        <li><a href="#"><span class="fa fa-phone"></span> 9850521786</a></li>
+                        <li><a href="#"><span class="fa fa-envelope"></span> internationalwaterproofing@gmail.com</a></li>
+                        <li><a href="#"><span class="fa fa-clock-o"></span> Mon - Sat 9:00 AM - 7:00 PM</a></li>
                     </ul>
                     <ul class="list-inline social_icon">
                         <li><a href=""><span class="fa fa-facebook"></span></a></li>
@@ -117,9 +117,8 @@
                         <img src="images/slider_img.jpg" alt="Construction">
                         <div class="overlay">
                             <div class="carousel-caption">
-                                <h3>We are Certified Engineers</h3>
-                                <h1>Construction Services</h1>
-                                <h1 class="second_heading">Creative & Professional</h1>
+                                <h1>INTERNATIONAL WATERPROOFING</h1>
+                                <h1 class="second_heading">WATERPROOFING Services IN PUNE</h1>
                                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,</p>
                                 <a  class="btn know_btn">know more</a>
                                 <a  class="btn know_btn">view project</a>
@@ -269,6 +268,41 @@
                 </div>
             </div>
         </section><!-- Services end -->
+
+
+        <!-- Chemicals -->
+        <section id="services">
+            <div class="container">
+                <h2>OUR SERVICES</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="service_item">
+                            <img src="images/service_img1.jpg" alt="Our Services" />
+                            <h3>CONSTRUCTION MANAGEMENT</h3>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,</p>
+                            <a href="#services" class="btn know_btn">know more</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service_item">
+                            <img src="images/service_img2.jpg" alt="Our Services" />
+                            <h3>RENOVATION</h3>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,</p>
+                            <a href="#services" class="btn know_btn">know more</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service_item">
+                            <img src="images/service_img3.jpg" alt="Our Services" />
+                            <h3>ARCHITECTURE</h3>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,</p>
+                            <a href="#services" class="btn know_btn">know more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section><!-- Chemicals end -->
+
 
         <!-- Portfolio -->
         <section id="portfolio">
@@ -450,16 +484,6 @@
                 </div>
             </div><!-- Footer top end -->
 
-            <!-- Footer bottom -->
-            <div class="footer_bottom text-center">
-                <p class="wow fadeInRight">
-                    Made with 
-                    <i class="fa fa-heart"></i>
-                    by 
-                    <a target="_blank" href="http://bootstrapthemes.co">Bootstrap Themes</a> 
-                    2016. All Rights Reserved
-                </p>
-            </div><!-- Footer bottom end -->
         </footer><!-- Footer end -->
 
         <!-- JavaScript -->
